
Package: R.utils
================

Version: 1.23.0 [2013-03-20]
o Added eget() for retrieving a single variable, with a 
  fallback to a default value, e.g. n <- eget(n=42).
o Added support for cmdArg(n=42) as an alias to cmdArg("n", 42).


Version: 1.22.0 [2013-03-14]
o Added cmdArg() for retrieving a single command line argument
  with a default value and type, e.g. n <- cmdArg("n", 42).


Version: 1.21.2 [2013-03-11]
o Bumped up package dependencies.


Version: 1.21.1 [2013-03-08]
o Added an Authors@R field to the DESCRIPTION.


Version: 1.21.0 [2013-03-07]
o Major improvement of commandArgs().  For instance, now it never
  consider arguments after '--args' to be reserved or environment
  variable arguments; they are always user arguments.  It is also
  doing a better job on interpreting -*<key>=<value> arguments;
  previously it could happen that it would split the <value>.
  Added systems test for commandArgs() and cmdArgs().


Version: 1.20.2 [2013-03-07]
o Now argument 'eps' for isZero() may also be a character string
  specifying either "double.eps" or "single.eps".


Version: 1.20.1 [2013-03-04]
o DOCUMENTATION: Updated the help usage section for all static methods.


Version: 1.20.0 [2013-02-24]
o Added cmdArgs() which is short for R.utils::commandArgs(asValues=TRUE,
  adhoc=TRUE, unique=TRUE, excludeReserved=TRUE, ...)[-1L].
o Now it is possible to specify default arguments in commandArgs().
  In addition, if asValues=TRUE, then the values of the parsed 
  command-line arguments will be coerced to the data type of the
  default ones if they share names.  If adhoc=TRUE, arguments will
  be coerced to numerics unless the result is NA.
o For conveniency, getAbsolutePath() and getRelativePath() returns 
  the same pathname if it is a URL.
o Added gstring() and gcat().
o Now it is possible to escape the sed-like search replace format
  for GString:s via quoting, e.g. ${'R.rsp/HttpDaemon/RspVersion'} .