@@ -157,7 +157,6 @@ cmdArg <- function(...) {
   res[[1]];
 } # cmdArg()
 
-
 ############################################################################
 # HISTORY:
 # 2013-03-20
